--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
 									<a href="tours.html">Tours</a>
 									
 								</li>
-								<li><a href="hotels.html">Hotels</a></li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="/hotels">Hotels</a></li>
+								<li><a href="/services">Services</a></li>
+								<li><a href="/blog">Blog</a></li>
+								<li><a href="/about">About</a></li>
+								<li><a href="/contact">Contact</a></li>
 							</ul>
 						</div>
 					</div>
