--- a/public/contact.html
+++ b/public/contact.html
@@ -155,7 +155,7 @@
 								<p><span><i class="icon-location"></i></span> 198 West 21th Street, <br> Medavakkam, Chennai, Tamil Nadu 600100</p>
 							</div>
 							<div class="col-md-3">
-								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 9750048622</a></p>
+								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+91 9750048622</a></p>
 							</div>
 							<div class="col-md-3">
 								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">chennaitour.com</a></p>
