--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
 						</div>
 						<div class="tab-content">
 							<div id="flight" class="tab-pane fade in active">
-								<form method="post" class="colorlib-form">
+								<form method="post" class="colorlib-form" action="/">
 				              	<div class="row">
 				              	 <div class="col-md-3">
 				              	 	<div class="form-group">
