--- a/public/tours.html
+++ b/public/tours.html
@@ -231,7 +231,7 @@
 						<div class="sidebar-wrap">
 							<div class="side search-wrap animate-box">
 								<h3 class="sidebar-heading">Find your tour</h3>
-								<form method="post" class="colorlib-form">
+								<form  class="colorlib-form" action="/">
 				              	<div class="row">
 				              	 <div class="col-md-12">
 				              	 	<div class="form-group">
