--- a/public/hotel-room.html
+++ b/public/hotel-room.html
@@ -237,7 +237,7 @@
 						<div class="sidebar-wrap">
 							<div class="side search-wrap animate-box">
 								<h3 class="sidebar-heading">Find your hotel</h3>
-								<form method="post" class="colorlib-form">
+								<form  class="colorlib-form"action="/">
 				              	<div class="row">
 				                <div class="col-md-12">
 				                  <div class="form-group">
